--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                <a class="nav-link" href="{{ site.baseurl }}/que-encontraras-en-este-blog/">About</a>
                 </li>
 
 <!--                <li class="nav-item">-->
