--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{site.google_ads}}"
+            crossorigin="anonymous"></script>
 </head>
 
 {% if jekyll.environment == 'production' %}
